# image2patch.py

./: LICENSE  README.md  pyproject.toml
adaptive_patch/: __init__.py
adaptivepatch/: __init__.py  patchutils.py
image2patch/: __init__.py  patchutils.py
