[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
[project]
name = "adaptivepatch"

authors = [
    {name = "Luca Pavirani", email = "luca481998@gmail.com"},
    {name = "Giorgio Allegri", email = "giorgioallegri7@gmail.com"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]

keywords = ["patch", "split", "augmentation", "image", "overlap"]

requires-python = ">=3.5"

dynamic = ["version", "description"]

[project.scripts]
adaptivepatch = "adaptivepatch.adaptivepatch:adaptivepatch"
[project.urls]
Documentation = "https://github.com/LucaPavirani/adaptivepatch.py"
Source = "https://github.com/LucaPavirani/adaptivepatch.py"