[tool.poetry]
authors = ["Luca Pavirani <luca481998@gmail.com>", "Giorgio Allegri <giorgioallegri7@gmail.com>"]
description = "A library that splits the image into overlapping or non-overlapping patches with the optimal step in order to minimize pixels loss. It can then merge them back together."
license = "MIT"
name = "image2patch"
readme = "README.md"
version = "0.1.1"

homepage = "https://github.com/LucaPavirani/image2patch.py"
repository = "https://github.com/LucaPavirani/image2patch.py"

classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Multimedia :: Graphics :: Editors",
]

keywords = ["patch", "split", "augmentation", "image", "overlap"]
packages = [
    { include = "image2patch" },
    { include = "image2patch/**/*.py" },
]
[tool.poetry.dependencies]
numpy = "^1"
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
jupyterlab = "^2.2.0"
mypy = "^0.782"
pylint = "^2.5.3"
pytest = "^5.4.3"

[tool.black]
exclude = '''
(
    /(
        \.eggs
    | \.git
    | \.pytype
    | \.pytest_cache
    | build
    | dist
    )/
)
'''

target-version = ["py36", "py37", "py38"]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]